#55 Armour display styling.

--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -291,16 +291,16 @@
                     {{#unless (eq data.data.armour.bodyType.name "") }}
                         <tr class="hit-locations">
                             <td class="dr-header"></td>
-                            <td class="dr-header">Flex</td>
-                            <td class="dr-damage-types">Hardness</td>
-                            <td class="dr-damage-types">Burn</td>
-                            <td class="dr-damage-types">Cor</td>
-                            <td class="dr-damage-types">Cr</td>
-                            <td class="dr-damage-types">Cut</td>
-                            <td class="dr-damage-types">Fat</td>
-                            <td class="dr-damage-types">Imp</td>
-                            <td class="dr-damage-types">Pi</td>
-                            <td class="dr-damage-types">Tox</td>
+                            <td class="dr-header" style="width: 30px;">Flex</td>
+                            <td class="dr-damage-types" style="width: 60px;">Hardness</td>
+                            <td class="dr-damage-types" style="width: 60px;">Burn</td>
+                            <td class="dr-damage-types" style="width: 60px;">Cor</td>
+                            <td class="dr-damage-types" style="width: 60px;">Cr</td>
+                            <td class="dr-damage-types" style="width: 60px;">Cut</td>
+                            <td class="dr-damage-types" style="width: 60px;">Fat</td>
+                            <td class="dr-damage-types" style="width: 60px;">Imp</td>
+                            <td class="dr-damage-types" style="width: 60px;">Pi</td>
+                            <td class="dr-damage-types" style="width: 60px;">Tox</td>
                         </tr>
                     {{/unless}}
                     {{#each data.data.armour.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
