Height is now input as a number of inches and a handlebar helper converts it to feet and inches for display.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -20,9 +20,14 @@
 						</div>
 					</div>
                     <div>
-                        <div class="bold label right">
-                            <input type="text" name="data.bio.height.value"
-                                   value="{{data.data.bio.height.value}}" placeholder="Height" />
+                        <div class="bold label right" style="display: flex;">
+							<div style="line-height: 15px;">
+								Height:
+							</div>
+							<div style="width: 48%">
+								<input type="number" name="data.bio.height.value" value="{{data.data.bio.height.value}}" placeholder="60"/>
+							</div>
+							<div style="line-height: 15px; padding-left: 1em;"> - {{inchesToFtIn data.data.bio.height.value}}</div>
                         </div>
                     </div>
                     <div>
