#55 Added remaining quality modifier inputs and hints

--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -219,6 +219,30 @@
                             </tr>
 
                             <tr class="design-row">
+                                <td>Banded Mail</td>
+                                <td>
+                                    <input type="checkbox" name="data.armourDesign.banded" {{checked data.data.armourDesign.banded}} data-dtype="Boolean"/>
+                                </td>
+                                <td class="question-container" id="armour-banded">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td>Butted Mail</td>
+                                <td>
+                                    <input type="checkbox" name="data.armourDesign.butted" {{checked data.data.armourDesign.butted}} data-dtype="Boolean"/>
+                                </td>
+                                <td class="question-container" id="armour-butted">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
                                 <td>Silk</td>
                                 <td>
                                     <input type="checkbox" name="data.armourDesign.silk" {{checked data.data.armourDesign.silk}} data-dtype="Boolean"/>
