--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -202,6 +202,22 @@
                             </tr>
                             {{/ifCond}}
 
+                            {{#if data.data.armourDesign.hasSole}}
+                            {{#ifCond data.data.tl '>=' 2}}
+                            <tr class="design-row">
+                                <td>Hobnails</td>
+                                <td>
+                                    <input type="checkbox" name="data.armourDesign.hobnails" {{checked data.data.armourDesign.hobnails}} data-dtype="Boolean"/>
+                                </td>
+                                <td class="question-container" id="armour-hobnailed">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            {{/ifCond}}
+                            {{/if}}
+
                             {{#if data.data.armourDesign.hasSteel}}
                             <tr class="design-row">
                                 <td>Hardened Steel</td>
